--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -21,7 +21,7 @@
   font-style: normal
 
 body, html
-  font-family: 'GT Walsheim Medium'
+  font-family: 'GT Walsheim Regular'
   margin: 0
   padding: 0
   height: 88%
