--- a/_sass/week.sass
+++ b/_sass/week.sass
@@ -19,7 +19,7 @@
   position: relative
   height: 18%
   width: 100%
- 
+
 .week-datename
   text-align: left
   font-size: 2.1vh
@@ -58,13 +58,14 @@ li#vare
   border-bottom: 1px solid $Varmgra
 
 .week-days
-  font-size: 2.3vh
+  font-size: 2.35vh
   text-align: center
   margin: .10em
   margin-top: -1.5%
 
 .this-week
-  font-size: 2.3vh
+  font-size: 2.35vh
+  font-weight: normal
   margin: 0
 
 .week-days ul
