--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -10,7 +10,7 @@ footer
   height: 12%
   display: grid
   grid: 0.85fr 1.15fr / 1fr
-  
+
   p
     margin: 0
 
@@ -25,7 +25,7 @@ footer
     &:visited
       color: $Varmgra
       text-decoration: none
-    
+
   .footer-menu
     position: relative
     width: 100%
@@ -37,17 +37,21 @@ footer
 
     #handlekurv-icon
       margin: auto 10px
+      padding-bottom: 10px
 
     .footer-text-output
       position: absolute
+      font-size: 2.2vh
       left: 25px
-    
+
     .footer-price
       position: absolute
+      font-size: 2.2vh
       right: 25px
 
   .nav-menu
     width: 100%
+    height: 7vh
     display: grid
     text-align: center
     grid: 1fr / repeat(5, 1fr)
