--- a/views/partials/Footer.hbs
+++ b/views/partials/Footer.hbs
@@ -1,8 +1,8 @@
 <footer>
   <div class='footer-menu'>
     <p class='footer-text-output'>
-      <img id="handlekurv-icon" src="/imgs/icon/Handlekurv.png" alt="">
-      Handlekurven er tom</p>
+      <img id="handlekurv-icon" src="/imgs/icon/handleliste-burger-large.png" alt="">
+      Handlelisten er tom</p>
       <span></span>
     <p class='footer-price'>kr 0,00</p>
   </div>
