--- a/_sass/burger.sass
+++ b/_sass/burger.sass
@@ -121,7 +121,7 @@
   position: relative
   width: 100%
   display: grid
-  grid-template-rows: 1fr 4fr 2fr 35vh 2fr
+  grid-template-rows: 1fr 4fr 2fr 3fr 2fr
   grid-template-areas: "title" "add-img" "name" "empty" "save-btn"
   grid-gap: 2vh
   justify-items: center
