Endringer fra Designer, header, og uke og litt footer

--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -37,7 +37,8 @@ footer
 
     #handlekurv-icon
       margin: auto 10px
-      padding-bottom: 10px
+      height: 3.1vh
+      margin-bottom: 5px
 
     .footer-text-output
       position: absolute
