--- a/_sass/header.sass
+++ b/_sass/header.sass
@@ -14,15 +14,20 @@
   #pil-icon
     grid-area: pil
     margin: 0 auto
+    width: 2vh
+    height: 3.5vh
 
   .header-text
     grid-area: text
-    font-size: 3em
+    font-size: 2.7em
+    font-weight: 200
     margin: 0
 
   #chat-icon
     grid-area: chat
     margin: 0 auto
+    width: 3vh
+    height: 3.5vh
 
   .handleliste-icon
     grid-area: handleliste
