--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,14 +10,19 @@
   grid-template-areas: "pil . text text text text chat handleliste"; }
   .planner-grid #pil-icon {
     grid-area: pil;
-    margin: 0 auto; }
+    margin: 0 auto;
+    width: 2vh;
+    height: 3.5vh; }
   .planner-grid .header-text {
     grid-area: text;
-    font-size: 3em;
+    font-size: 2.7em;
+    font-weight: 200;
     margin: 0; }
   .planner-grid #chat-icon {
     grid-area: chat;
-    margin: 0 auto; }
+    margin: 0 auto;
+    width: 3vh;
+    height: 3.5vh; }
   .planner-grid .handleliste-icon {
     grid-area: handleliste;
     margin: 0 auto; }
