--- a/_sass/burger.sass
+++ b/_sass/burger.sass
@@ -51,8 +51,8 @@
     z-index: 1005
     top: 3.3vh
     right: 3.5vh
-    height: 70px
-    width: 70px
+    width: 3.5vh
+    height: 3.5vh
     background-image: url('/imgs/icon/Handleliste.png')
     background-size: cover
     transition: all 300ms ease-in-out
@@ -133,7 +133,7 @@
     grid-area: title
     margin: 0
     font-size: 3rem
-  
+
   .list-burger-save-btn
     grid-area: save-btn
     background: none
@@ -145,7 +145,7 @@
     width: 155px
 
     &.save
-      background-image: url('/imgs/icon/V-lilla.png')      
+      background-image: url('/imgs/icon/V-lilla.png')
 
 
   span
