--- a/public/css/burger.css
+++ b/public/css/burger.css
@@ -46,8 +46,8 @@
     z-index: 1005;
     top: 3.3vh;
     right: 3.5vh;
-    height: 70px;
-    width: 70px;
+    width: 3.5vh;
+    height: 3.5vh;
     background-image: url("/imgs/icon/Handleliste.png");
     background-size: cover;
     -webkit-transition: all 300ms ease-in-out;
