--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -32,7 +32,8 @@ footer {
             align-items: center; }
     footer .footer-menu #handlekurv-icon {
       margin: auto 10px;
-      padding-bottom: 10px; }
+      height: 3.1vh;
+      margin-bottom: 5px; }
     footer .footer-menu .footer-text-output {
       position: absolute;
       font-size: 2.2vh;
