untested search logic

--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -25,7 +25,7 @@
       <img class="inspiration-filter" src="/imgs/icon/filter-knapp.png" alt="">
     </div>
     <div class="search-container">
-      <input type="text" id="search-t" onkeyup="searchTerm()" placeholder="Søk i tusenvis av varer">
+      <input type="text" id="search-t" placeholder="Søk i tusenvis av varer">
     </div>
   <!--  <div class="inspiration-container">-->
       <!--Denne skal inn rett etter at man har trykket på en av kategoriene i inspirasjon -->
