Endringer fra elisabeth

--- a/_sass/header.sass
+++ b/_sass/header.sass
@@ -10,6 +10,7 @@
   text-align: center
   grid-gap: .5%
   grid-template-areas: "pil . text text text text chat handleliste"
+  padding-bottom: 2vh
 
   #pil-icon
     grid-area: pil
@@ -32,3 +33,6 @@
   .handleliste-icon
     grid-area: handleliste
     margin: 0 auto
+
+  hr
+    width: 100%
