--- a/_sass/product-item.sass
+++ b/_sass/product-item.sass
@@ -8,7 +8,7 @@
   grid-template-rows: 50% 50%
   grid-template-areas: "prodImg name pricePerUnit iconImg" "prodImg description price iconImg"
   column-gap: 10px
-  border-bottom: 1px solid $Varmgra
+  border-bottom: 1px solid
 
   &.selected
     grid-template-columns: 8vh 6vh auto 12vh
@@ -20,7 +20,7 @@
     #price-quantity
       text-align: left
       color: $Varmgra
-    
+
     #include-button
       visibility: hidden
     #quantity-block
@@ -52,7 +52,7 @@
     font-size: 2rem
     line-height: 2.2em
     grid-area: pricePerUnit
-  
+
   #price-quantity
     text-align: right
     font-size: 2rem
