--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -5,11 +5,6 @@
 {{/section}}
 
 <div class="category-container">
-<!--Denne skal inn i selve barnebursdagkategorien-->
-<!--
-  <div class="inspiration-header">
-    <img class="inspiration-img"src="/imgs/inspiration/insp-med-tekst.png" alt="">
-  </div>-->
   <div class="icon-button">
     <img class="pluss-icon" src="/imgs/icon/AddItemsPlusIcon.png">
     <img class="button-white" src="/imgs/icon/AddProductBlack.png" alt="">
@@ -25,26 +20,9 @@
       <img class="inspiration-filter" id="product-filter-open-btn" src="/imgs/icon/filter-knapp.png" alt="">
     </div>
     <div class="search-container">
+      <img class="search-img" src="/imgs/icon/sokeglass.png" alt="">
       <input type="text" id="search-t" onkeyup="searchTerm()" placeholder="Søk i tusenvis av varer">
     </div>
-  <!--  <div class="inspiration-container">-->
-      <!--Denne skal inn rett etter at man har trykket på en av kategoriene i inspirasjon -->
-  <!-- <ul class="inspiration-border">
-        <li>Familiemiddag</li>
-        <li>Helgekos</li>
-        <li class="activeEvent">Selskap</li>
-        <li>Gjester</li>
-        <li>Høytid</li>
-      </ul>-->
-
-      <!--Denne skal inn i selve Barnebursdag kategorien -->
-      <!--<ul class="inspiration-choise">
-        <span></span>
-        <li class="activeEvent">Produkter</li>
-        <li>Oppskrifter</li>
-        <span></span>
-      </ul>
-    </div>-->
     <div class="categories">
       <ul class="category-list">
         <li class="inspiration">Inspirasjon</li>
@@ -54,17 +32,5 @@
         {{/each}}
       </ul>
     </div>
-  <!--  <div class="recipe-container">
-      <div class="recipe">
-        <img src="/imgs/inspiration/xmas.jpg" alt="">
-        <h2 class="recipe-title">Brownies med glasur</h2>
-        <h1 class="recipe-description">30min Lett</h1>
-      </div>
-      <div class="recipe">
-        <img src="/imgs/inspiration/xmas.jpg" alt="">
-        <h3 class="recipe-title">Torsk i hvit saus</h3>
-        <h3 class="recipe-description">45min Medium</h3>
-      </div>
-    </div>-->
   </div>
 </div>
