--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -42,12 +42,17 @@
 
     .categories
       top: 22vh
-      height: 36vh
+      height: 34vh
 
     .inspiration-border
       grid-template-columns: repeat(2, 2fr)
       margin: 0 auto
       width: 60%
+
+    .inspiration-filter
+      height: 3.5vh
+      width: 7.5vh
+      overflow: visible
 
 
 .inspiration-header
@@ -82,6 +87,7 @@
 .search-title
   position: relative
   text-align: center
+  left: 0.8vh
   z-index: 2
   font-size: 2.3vh
 
@@ -100,11 +106,19 @@
   position: relative
   top: 0.7vh
   text-align: left
-  left: 7vh
-  color: grey
+  left: 3vh
+  font-size: 2vh
+  color: $frost
   border: 0
   &:active
     border: 0
+
+.search-img
+  position: relative
+  left: 2vh
+  top: 0.4vh
+  width: 2vh
+  height: 2vh
 
 .inspiration-container
   position: relative
@@ -130,8 +144,8 @@
 
 .inspiration-filter
   position: relative
-  width: 7.5vh
   height: 3.5vh
+  width: 7.5vh
   right: 2vh
   overflow: hidden
 
@@ -139,7 +153,7 @@
   position: absolute
   width: 100%
   margin-top: 2vh
-  height: 45vh
+  height: 42vh
   list-style: none
   font-size: 2.5vh
   overflow-y: scroll
@@ -217,30 +231,3 @@
 
 .changeButton
   display: none
-
-.recipe-container
-  position: absolute
-  width: 100%
-  top: 19vh
-  overflow: scroll
-  height: 28vh
-
-.recipe
-  margin: 0 auto
-  width: 96%
-  height: 24vh
-  display: grid
-  grid-template-rows: 13vh 4vh 3vh
-
-.recipe img
-  margin: 0 auto
-  width: 100%
-  height: 15vh
-  border-radius: 25px
-  object-fit: cover
-
-.recipe-title
-  font-size: 2.7vh
-
-.recipe-description
-  font-size: 2.3vh
