--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,7 +7,8 @@
   grid: 12%/repeat(8, 1fr);
   text-align: center;
   grid-gap: .5%;
-  grid-template-areas: "pil . text text text text chat handleliste"; }
+  grid-template-areas: "pil . text text text text chat handleliste";
+  padding-bottom: 2vh; }
   .planner-grid #pil-icon {
     grid-area: pil;
     margin: 0 auto;
@@ -26,3 +27,5 @@
   .planner-grid .handleliste-icon {
     grid-area: handleliste;
     margin: 0 auto; }
+  .planner-grid hr {
+    width: 100%; }
