Changes to be committed: 	modified:   _sass/categories.sass 	modified:   _sass/footer.sass 	modified:   public/css/categories.css 	modified:   public/css/footer.css 	modified:   public/css/main.css 	new file:   public/imgs/icon/kategori-pil.png 	modified:   views/partials/categories.hbs

--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -55,7 +55,7 @@ footer
     height: 7vh
     display: grid
     text-align: center
-    grid: 1fr / repeat(5, 1fr)
+    grid: 1fr / repeat(5, auto)
     background: $sort-aubergine
 
     a
