--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,7 +47,7 @@ footer {
     height: 7vh;
     display: grid;
     text-align: center;
-    grid: 1fr/repeat(5, 1fr);
+    grid: 1fr/repeat(5, auto);
     background: #2d2832; }
     footer .nav-menu a {
       width: 100%;
