--- a/views/partials/Footer.hbs
+++ b/views/partials/Footer.hbs
@@ -2,9 +2,9 @@
   <div class='footer-menu'>
     <p class='footer-text-output'>
       <img id="handlekurv-icon" src="/imgs/icon/Handlekurv.png" alt="">
-      Handlekurven er tom</p>
+      Handlekurven {{#if num_products}}har {{num_products}} produkter{{else}}er tom{{/if}}</p>
       <span></span>
-    <p class='footer-price'>kr 0,00</p>
+    <p class='footer-price'>kr {{#if total_sum}}{{total_sum}}{{else}}0,00{{/if}}</p>
   </div>
 
   <div class="nav-menu">
